--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rishabh Raj | Full Stack Developer</title>
-    <meta name="description" content="Professional portfolio of Rishabh Raj, a full stack developer specialized in modern web technologies." />
-    <meta name="author" content="Rishabh Raj" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <title>Niku Kumar | Full Stack Developer</title>
+    <meta name="description" content="Professional portfolio of Niku Kumar, a full stack developer specialized in modern web technologies." />
+    <meta name="author" content="Niku Kumar" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta property="og:image" content="/og-image.png" />
   </head>
 
